--- a/ui.html
+++ b/ui.html
@@ -21,6 +21,7 @@
     .point {
         position: absolute;
         border-radius: 50%;
+        /*opacity: .5;*/
     }
 </style>
 <body>
@@ -40,40 +41,6 @@
     onmessage = (event) => {
         const payload = event.data.pluginMessage.payload
         console.log('ui收到消息', payload)
-
-        const fragment = document.createDocumentFragment()
-        const markPoint = (point, option) => {
-            const div = document.createElement('div')
-            const size = 5
-
-            div.className = 'point'
-            div.style.cssText = `
-              width: ${size}px;
-              height: ${size}px;
-              transform: translate(${point.x - size / 2}px, ${point.y - size / 2}px);
-              background-color: ${option.color}
-          `
-            fragment.appendChild(div)
-        }
-
-        // 顶点
-        payload.lines.forEach((line) => markPoint(line.start, {color: '#ffda37'}))
-
-        // 关键点
-        payload.points.forEach((point) => markPoint(point, {color: '#ffda37'}))
-
-        // 控制点
-        // payload.controls.forEach((point) => markPoint(point, {color: '#f44'}))
-
-        const {figma, web} = payload.controls
-
-        markPoint(figma.start, {color: '#f44'})
-        markPoint(web.start, {color: '#f44'})
-        markPoint(figma.end, {color: '#37ffca'})
-        markPoint(web.end, {color: '#37ffca'})
-
-        node.innerHTML = ''
-        node.appendChild(fragment)
 
         console.log(payload.backgroundImage)
 
